[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
