[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
