[package]
name = "staking-miner"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
clap = { version = "4.0.9", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
jsonrpsee = { version = "0.16.2", features = ["ws-client", "macros"] }
log = "0.4.17"
paste = "1.0.7"
serde = "1.0.137"
serde_json = "1.0"
thiserror = "1.0.31"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "sync"] }
remote-externalities = { git = "https://github.com/paritytech/substrate", package = "frame-remote-externalities" , branch = "oty-try-runtime-checks" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }

core-primitives = { package = "polkadot-core-primitives", path = "../../core-primitives" }

runtime-common = { package = "polkadot-runtime-common", path = "../../runtime/common" }
polkadot-runtime = { path = "../../runtime/polkadot" }
kusama-runtime = { path = "../../runtime/kusama" }
westend-runtime = { path = "../../runtime/westend" }
exitcode = "1.1"

sub-tokens = { git = "https://github.com/paritytech/substrate-debug-kit", branch = "master" }
signal-hook = "0.3"
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2.0.4"
