[package]
name = "polkadot-test-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-cli-select-check" }
futures = "0.3.21"
