[package]
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-try-runtime-checks" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
futures = "0.3.21"
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-test-client = { path = "../../../node/test/client" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../../../node/test/service" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-try-runtime-checks" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }
xcm = { path = "../..", default-features = false }
xcm-executor = { path = ".." }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "oty-try-runtime-checks" }

[features]
default = ["std"]
std = [
	"xcm/std",
	"sp-runtime/std",
	"frame-support/std",
]
